# Automated_copier

./: .env.example  .gitignore  ISSUE_RESOLUTION_SUMMARY.md  PERSISTENCE_IMPLEMENTATION.md  PR_SUMMARY.md  README.md  USB_MANAGER_GUIDE.md  pyproject.toml
src/MediaCopier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mediacopier/: __init__.py  __main__.py  app.py
src/mediacopier/api/: __init__.py  techaura_client.py
src/mediacopier/config/: __init__.py  settings.py
src/mediacopier/core/: __init__.py  copier.py  demo.py  duplicate_detector.py  file_organizer.py  indexer.py  job_report.py  logger.py  matcher.py  metadata_audio.py  metadata_video.py  models.py  runner.py  usb_detector.py  usb_manager.py
src/mediacopier/integration/: __init__.py  order_processor.py
src/mediacopier/persistence/: README.md  __init__.py  job_storage.py  stats_storage.py  ui_state.py
tests/: conftest.py  test_cli.py  test_copier.py  test_demo.py  test_duplicate_detector.py  test_file_organizer.py  test_file_organizer_integration.py  test_indexer.py  test_integration_pipeline.py  test_job_report.py  test_logger.py  test_matcher.py  test_metadata_audio.py  test_metadata_video.py  test_models.py  test_order_processor.py  test_order_processor_comprehensive.py  test_persistence.py  test_persistence_integration.py  test_resilience.py  test_runner.py  test_settings.py  test_settings_dialog.py  test_settings_dialog_import.py  test_techaura_client.py  test_techaura_client_comprehensive.py  test_ui_components.py  test_usb_detector.py  test_usb_manager.py
(+8 files in other folders)
