[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaCopier"
version = "0.1.0"
description = "MediaCopier base project scaffold."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["customtkinter>=5.2.2"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.6.0"]
matching = ["rapidfuzz>=3.6.0"]
audio = ["mutagen>=1.47.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
